testing importing json into javascript

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <ul id="header-elements">
             <li>
                 <form action="post">
-                    <select name="----" id="potion-lists"></select>
+                    <select name="postion_lists" id="postion-lists">
+                        
+                    </select>
                 </form>
             </li>
         </ul>
