listing and hover effects

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <div id="potion-name">
 
                 </div>
+                <div id="potion-duration">
+
+                </div>
                 <div id="potion-description">
                     
                 </div>
