changed folder names
changed the icons folder names to make room for future planned updates

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Potion Calculator</title>
     </head>
     <body>
         <link rel="stylesheet" href="styles.css">
         <div id="header">
-            
+            some content
         </div>
         <div id="list-of-potions">
             
@@ -22,6 +22,7 @@
                 <ul id="navigation-btns">
                     <li><button id="info-btn">info</button></li>
                     <li><button id="ingredients-btn">total ingredients</button></li>
+                    <li><button id=""></button></li>
                 </ul>
             </div>
             <div id="potion-information">
@@ -43,6 +44,6 @@
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-        <script src="app.js"></script>
+        <script src="potion_list.js"></script>
     </body>
 </html>
